CSS updated to prevent jump in between the slides

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -1890,7 +1890,7 @@ a.menu-box:hover img {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
-.optionset-quote-slider li.flex-active-slide, .optionset-quote-slider li.flex-active-slide div,  .optionset-quote-slider li.flex-active-slide span {
+.optionset-quote-slider li.flex-active-slide, .optionset-quote-slider li, .optionset-quote-slider li.flex-active-slide div, .optionset-quote-slider li div,  .optionset-quote-slider li.flex-active-slide span, .optionset-quote-slider li span {
   height: 100%;
 }
 
